test_files/recompilation/type_error/main_V1+2+3.erl
-module(main).

-export([main/0]).

-spec main() -> boolean().
main() -> foo:foo(true).
